--- a/firebase.json
+++ b/firebase.json
@@ -3,20 +3,24 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "./build",
-    "cleanUrls": true,
-    "rewrites": [
-      {
-        "source": "**/*",
-        "destination": "/index.html"
-      }
-    ],
+    "public": "build",
     "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**",
       "/test/**",
       "bower.json",
       "database.rules.json",
-      "firebase.json",
       "README.md"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
