Update sponsor button action

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -35,7 +35,7 @@
   "hashtag": "devfestizmir",
   "disqusShortName": "hoverboard-gdg-x",
   "tweetsSource": "/data/tweets.json",
-  "partnershipProposition": "http://bit.ly/df16-sponsor",
+  "partnershipProposition": "mailto:info@gdgdizmir.org",
   "videosSessionsUrl": "",
   "enableSessionsRating": true,
   "navigation": [
