Change banner image

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -104,7 +104,7 @@
       "title": "Ana sayfa",
       "headerSettings": {
         "backgroundColor": "#388E3C",
-        "backgroundImage": "/images/backgrounds/home.png",
+        "backgroundImage": "/images/backgrounds/izmir-banner.jpg",
         "fontColor": "#fff",
         "tabBarColor": "#fff",
         "video": {
