Try twitter script url

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -34,7 +34,7 @@
   },
   "hashtag": "devfestizmir",
   "disqusShortName": "hoverboard-gdg-x",
-  "tweetsSource": "",
+  "tweetsSource": "http://wtmizmir.com/twitter/tweet.php",
   "partnershipProposition": "mailto:info@gdgdizmir.org",
   "videosSessionsUrl": "",
   "enableSessionsRating": true,
