Remove TBA from schedule title

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -133,7 +133,7 @@
       }
     },
     "schedule": {
-      "title": "Program [TBA]",
+      "title": "Program",
       "headerSettings": {
         "backgroundColor": "#673ab7",
         "fontColor": "#fff",
