Update location photos

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -84,9 +84,9 @@
       "longitude": 27.2147555
     },
     "images": [
-      "/images/backgrounds/location_1.jpg",
-      "/images/backgrounds/location_2.jpg",
-      "/images/backgrounds/location_3.jpg"
+      "/images/backgrounds/yasar-universitesi1.jpg",
+      "/images/backgrounds/yasar-universitesi2.jpg",
+      "/images/backgrounds/yasar-universitesi3.jpeg"
     ]
   },
   "gallery": {
